Java 11 compatible and some random comments